[package]
name = "rspe"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Thoxy"]
description = "Simple Native Rust Reflective PE loader library"
readme = "README.md"
repository = "https://github.com/Thoxy67/rspe/"
documentation = "https://docs.rs/rspe"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows-sys]
version = "^0.48.0"
features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
]