[package]
name = "rspe"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Thoxy"]
description = "Simple Native Rust Reflective PE loader library"
readme = "README.md"
repository = "https://github.com/Thoxy67/rspe/"
documentation = "https://docs.rs/rspe"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
